ikiwiki (3.13) UNRELEASED; urgency=low

  * ikiwiki-transition: If passed a nonexistant srcdir, or one not
    containing .ikiwiki, abort with an error rather than creating it.

 -- Joey Hess <joeyh@debian.org>  Wed, 06 May 2009 20:45:44 -0400

ikiwiki (3.12) unstable; urgency=low

  * Re-enable python-support and add python:Depends to control file.
  * ikiwiki-makerepo: Avoid using abs_path, as it apparently
    fails on nonexistant directories with some broken perl
    versions.
  * inline: Minor optimisation.
  * add_link: New function, which plugins should use rather than
    modifying %links directly, to avoid it accumulating duplicates.
  * ikiwiki-transition: Add a deduplinks action, that can be used
    to remove duplicate links and optimise a wiki w/o rebuilding it.
  * external: Fix pagespec_match and pagespec_match_list.
    Closes: #527281

 -- Joey Hess <joeyh@debian.org>  Wed, 06 May 2009 00:31:16 -0400

ikiwiki (3.11) unstable; urgency=low

  * Avoid using python-support. Closes: #525086
  * websetup: Display stderr in browser if ikiwiki setup fails.
  * blogspam: Load RPC::XML library in checkconfig, so that an
    error can be printed at that point if it's not available,
    allowing the admin to see it during wiki setup.
    Closes: #520015
  * websetup: If setup fails, restore old setup file.
  * relativedate: Deal with clock skew.
  * Add IkiWiki::ErrorReason objects, and modify pagespecs to return
    them in cases where they fail to match due to a configuration or syntax
    error.
  * pagespec_match_list: New API function, matches pages in a list
    and throws an error if the pagespec is bad.
  * inline, brokenlinks, calendar, linkmap, map, orphans, pagecount,
    pagestate, postsparkline: Display a handy error message if the pagespec
    is erronious.
  * comments: Add link to comment post form to allow user to sign in
    if they wish to, if the configuration makes signin optional
    for commenting.