@@ -2,6 +2,8 @@ ikiwiki (3.13) UNRELEASED; urgency=low
 
   * ikiwiki-transition: If passed a nonexistant srcdir, or one not
     containing .ikiwiki, abort with an error rather than creating it.
+  * Allow underlaydir to be overridden without messing up inclusion
+    of other underlays via add_underlay.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 06 May 2009 20:45:44 -0400
 
